Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Age</label>
    <type>Checkbox</type>
</CustomField>