Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/B2B_Technographics__c.field-meta.xml
<CustomField>
    <fullName>B2B_Technographics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2B - Technographics</label>
    <type>Checkbox</type>
</CustomField>