Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/B2B_Technographics_Sources__c.field-meta.xml
<CustomField>
    <fullName>B2B_Technographics_Sources__c</fullName>
    <label>B2B - Technographics Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B Publications</fullName>
            </value>
            <value>
                <fullName>Declared Registration Data</fullName>
            </value>
            <value>
                <fullName>Survey Data</fullName>
            </value>
            <value>
                <fullName>B2B Purchase Data</fullName>
            </value>
            <value>
                <fullName>Lead Gen Data</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>