Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Build_custom_audience_segment_ability__c.field-meta.xml
<CustomField>
    <fullName>Build_custom_audience_segment_ability__c</fullName>
    <label>Build custom audience segment ability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Not available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>