Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/CMP_Verified__c.field-meta.xml
<CustomField>
    <fullName>CMP_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CMP Verified</label>
    <type>Checkbox</type>
</CustomField>