Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Collect_mobile_device_IDs_IDFA_ADID__c.field-meta.xml
<CustomField>
    <fullName>Collect_mobile_device_IDs_IDFA_ADID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collect mobile device IDs (IDFA, ADID)</label>
    <type>Checkbox</type>
</CustomField>