Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Data_Origin_Loyalty_Card_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Data_Origin_Loyalty_Card_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Origin: Loyalty Card Transaction</label>
    <type>Checkbox</type>
</CustomField>