Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Data_Origin_Web_Usage__c.field-meta.xml
<CustomField>
    <fullName>Data_Origin_Web_Usage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Origin: Web Usage</label>
    <type>Checkbox</type>
</CustomField>