Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Data_supplier_status_Europe__c.field-meta.xml
<CustomField>
    <fullName>Data_supplier_status_Europe__c</fullName>
    <label>Data supplier status (Europe)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Controller of personal data</fullName>
            </value>
            <value>
                <fullName>Processor of personal data</fullName>
            </value>
            <value>
                <fullName>Not providing any personal data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>