Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Third-party data</fullName>
            </value>
            <value>
                <fullName>Blend of first-party and third-party data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>