Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/DMP_DSP_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>DMP_DSP_Exclusion__c</fullName>
    <label>DMP/ DSP Exclusion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>