Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Education</label>
    <type>Checkbox</type>
</CustomField>