Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employment Status</label>
    <type>Checkbox</type>
</CustomField>