Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Existing_DSPs__c.field-meta.xml
<CustomField>
    <fullName>Existing_DSPs__c</fullName>
    <label>Existing DSPs</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>