Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Gender_Sources__c.field-meta.xml
<CustomField>
    <fullName>Gender_Sources__c</fullName>
    <label>Gender Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declared data via census information</fullName>
            </value>
            <value>
                <fullName>Surveys</fullName>
            </value>
            <value>
                <fullName>Completed forms</fullName>
            </value>
            <value>
                <fullName>Registrations</fullName>
            </value>
            <value>
                <fullName>Inferred data from Eyeota statistical modelling from declared data sets or 3rd parties modelling</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>