Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Generation__c.field-meta.xml
<CustomField>
    <fullName>Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generation</label>
    <type>Checkbox</type>
</CustomField>