Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Geo_Location_Acquisition_Info__c.field-meta.xml
<CustomField>
    <fullName>Geo_Location_Acquisition_Info__c</fullName>
    <label>Geo Location Acquisition Info</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>