Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/How_is_data_Verified__c.field-meta.xml
<CustomField>
    <fullName>How_is_data_Verified__c</fullName>
    <label>How is data Verified</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>