Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Interest_Sources__c.field-meta.xml
<CustomField>
    <fullName>Interest_Sources__c</fullName>
    <label>Interest Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online Content</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>