Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Marital_Status_Sources__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status_Sources__c</fullName>
    <label>Marital Status Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Census Information</fullName>
                <default>true</default>
                <label>Census Information</label>
            </value>
            <value>
                <fullName>Surveys</fullName>
            </value>
            <value>
                <fullName>Completed Forms</fullName>
            </value>
            <value>
                <fullName>Registrations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>