Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/MB_How_is_your_data_onboarded__c.field-meta.xml
<CustomField>
    <fullName>MB_How_is_your_data_onboarded__c</fullName>
    <label>How is your data onboarded</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>