Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/MB_Outline_of_data_product__c.field-meta.xml
<CustomField>
    <fullName>MB_Outline_of_data_product__c</fullName>
    <label>Outline of data product</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>