Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/MB_USPs_against_your_competitors__c.field-meta.xml
<CustomField>
    <fullName>MB_USPs_against_your_competitors__c</fullName>
    <label>USPs against your competitors</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>