Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/MB_Why_advertisers_should_use_this_data__c.field-meta.xml
<CustomField>
    <fullName>MB_Why_advertisers_should_use_this_data__c</fullName>
    <label>Why advertisers should use this data</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>