Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Measurement_of_Success__c.field-meta.xml
<CustomField>
    <fullName>Measurement_of_Success__c</fullName>
    <label>Measurement of Success</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reach</fullName>
            </value>
            <value>
                <fullName>Clicks</fullName>
            </value>
            <value>
                <fullName>CTR</fullName>
            </value>
            <value>
                <fullName>VTR</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>CPL</fullName>
            </value>
            <value>
                <fullName>ROI %</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>