Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Monthly_pixel_calls_or_syncs__c.field-meta.xml
<CustomField>
    <fullName>Monthly_pixel_calls_or_syncs__c</fullName>
    <label>Monthly pixel calls or syncs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>