Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Offline_Transaction_Acquisition_Info__c.field-meta.xml
<CustomField>
    <fullName>Offline_Transaction_Acquisition_Info__c</fullName>
    <label>Offline Transaction Acquisition Info</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>