Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Onboarding_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Data_Type__c</fullName>
    <label>Onboarding Data Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM Data</fullName>
            </value>
            <value>
                <fullName>Transactional Data</fullName>
            </value>
            <value>
                <fullName>Loyalty Card Data</fullName>
            </value>
            <value>
                <fullName>Survey Data</fullName>
            </value>
            <value>
                <fullName>Research Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>