Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Online_Ecommerce_Acquisition_Info__c.field-meta.xml
<CustomField>
    <fullName>Online_Ecommerce_Acquisition_Info__c</fullName>
    <label>Online Ecommerce Acquisition Info</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>