Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Opp_Number_of_audiences__c.field-meta.xml
<CustomField>
    <fullName>Opp_Number_of_audiences__c</fullName>
    <label>Number of audiences</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1- 5</fullName>
            </value>
            <value>
                <fullName>6 - 10</fullName>
            </value>
            <value>
                <fullName>11-15</fullName>
            </value>
            <value>
                <fullName>16+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>