Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Opt_out_Communication__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_Communication__c</fullName>
    <label>Opt-out: Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update files</fullName>
            </value>
            <value>
                <fullName>Opt-out file provided</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>