Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Other_transfer_mechanism_outside_EU__c.field-meta.xml
<CustomField>
    <fullName>Other_transfer_mechanism_outside_EU__c</fullName>
    <label>Other (transfer mechanism outside EU)</label>
    <type>TextArea</type>
</CustomField>