Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Participation_in_Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Participation_in_Industry_Code__c</fullName>
    <label>Participation in Industry Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Network Advertising Initiative (NAI)</fullName>
            </value>
            <value>
                <fullName>Direct Marketing Assn (US)</fullName>
            </value>
            <value>
                <fullName>Digital Advertising Alliance (DAA)</fullName>
            </value>
            <value>
                <fullName>Direct Marketing Assn (UK)</fullName>
            </value>
            <value>
                <fullName>EDDA (YourOnlineChoices.com)</fullName>
            </value>
            <value>
                <fullName>ePrivacy Seal</fullName>
            </value>
            <value>
                <fullName>Interactive Advertising Bureau (IAB)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>