Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Privacy_Links__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Links__c</fullName>
    <label>Privacy: Links</label>
    <type>Url</type>
</CustomField>