Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Public_Record_Census_Acquisition_Info__c.field-meta.xml
<CustomField>
    <fullName>Public_Record_Census_Acquisition_Info__c</fullName>
    <label>Public Record: Census Acquisition Info</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>