Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Purpose_of_providing_data__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_providing_data__c</fullName>
    <label>Purpose of providing data</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online Interest-Based Advertising</fullName>
            </value>
            <value>
                <fullName>Personalization</fullName>
            </value>
            <value>
                <fullName>Linkage</fullName>
            </value>
            <value>
                <fullName>Modelling</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>