Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Regulatory_related_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_related_Involvement__c</fullName>
    <label>Regulatory related Involvement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Network Advertising Initiative (NAI)</fullName>
            </value>
            <value>
                <fullName>Direct Marketing Assn (US)</fullName>
            </value>
            <value>
                <fullName>Digital Advertising Alliance (DAA)</fullName>
            </value>
            <value>
                <fullName>Direct Marketing Assn (UK)</fullName>
            </value>
            <value>
                <fullName>EDDA (YourOnlineChoices.com)</fullName>
            </value>
            <value>
                <fullName>ePrivacy Seal</fullName>
            </value>
            <value>
                <fullName>Interactive Advertising Bureau (IAB) US/CA</fullName>
            </value>
            <value>
                <fullName>Interactive Advertising Bureau (IAB) EU</fullName>
            </value>
            <value>
                <fullName>Interactive Advertising Bureau (IAB) APAC</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>