Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Renter_Sources__c.field-meta.xml
<CustomField>
    <fullName>Renter_Sources__c</fullName>
    <label>Renter Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Census Information</fullName>
            </value>
            <value>
                <fullName>Surveys</fullName>
            </value>
            <value>
                <fullName>Completed Forms</fullName>
            </value>
            <value>
                <fullName>Real Estate Resources</fullName>
            </value>
            <value>
                <fullName>Registrations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>