Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Share_data_under_basis_on_consent__c.field-meta.xml
<CustomField>
    <fullName>Share_data_under_basis_on_consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share data under basis on consent</label>
    <type>Checkbox</type>
</CustomField>