Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Transfer_mechanism_outside_EU__c.field-meta.xml
<CustomField>
    <fullName>Transfer_mechanism_outside_EU__c</fullName>
    <description>Eyeota uses Standard Contractual Clauses to transfer data from/to Eyeota outside of the European Union, if data would be transferred to Eyeota under a different transfer mechanism, please indicate.</description>
    <label>Transfer mechanism outside EU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-standard data transfer agreement</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
            <value>
                <fullName>We will be transferring data to Eyeota using Standard Contractual Clauses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>