Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/TV_Viewership__c.field-meta.xml
<CustomField>
    <fullName>TV_Viewership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TV Viewership</label>
    <type>Checkbox</type>
</CustomField>