Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/fields/Volume_of_offline_profiles__c.field-meta.xml
<CustomField>
    <fullName>Volume_of_offline_profiles__c</fullName>
    <label>Volume of offline profiles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>