Sandbox/02-12-2025/force-app/main/default/objects/Questionnaire__c/recordTypes/Pre_contract_questionnaire.recordType-meta.xml
<RecordType>
    <fullName>Pre_contract_questionnaire</fullName>
    <active>true</active>
    <description>Before on-boarding of suppliers</description>
    <label>Pre-contract questionnaire</label>
</RecordType>